deployment/satosa/k8s/service_example.yml
apiVersion: v1
kind: Service
metadata:
  name: satosaauth-service
  namespace: <YOUR-NAMESPACE>
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: satosaauth
  type: ClusterIP
