deployment/satosa/k8s/ingress_example.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    certmanager.k8s.io/cluster-issuer: letsencrypt-live
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    traefik.frontend.rule.type: PathPrefixStrip
  name: satosaauth-ingress
  namespace: <YOUR-NAMESPACE>
spec:
  rules:
  - host: <YOUR-HOSTNAME>
    http:
      paths:
      - backend:
          serviceName: privacy-statement-service
          servicePort: 80
        path: /privacy-statement
      - backend:
          serviceName: satosaauth-service
          servicePort: 80
        path: /
  tls:
    - hosts:
        - <YOUR-HOSTNAME>
      secretName: <YOUR-SECRETNAME>
